device: qcom: msm8660_surf: init.target.rc: add commands for turning on dcvs 10.7
Change-Id: I7c2a583f3df409b5ab0cdec407f50939ad65872b

--- a/init.target.rc
+++ b/init.target.rc
@@ -54,3 +54,7 @@ service dcvs1 /system/bin/dcvs --cpu=1 --slacktime=64
 service mpdecision /system/bin/mpdecision --Nw=0.6 --Tw=80 --Ns=0.1 --Ts=250
     user root
     disabled
+
+on property:init.svc.bootanim=stopped
+    start dcvsd0
+    start dcvsd1
