--- a/init.target.rc
+++ b/init.target.rc
@@ -27,13 +27,12 @@
 #
 #
 
+# on emmc mount the partition containing firmware
 on emmc-fs
-    mount ext4 /dev/block/mmcblk0p12 /system remount rw barrier=0
-    mkdir /system/etc/firmware/misc 0771 system system
-    devwait /dev/block/mmcblk0p1
-    mount vfat /dev/block/mmcblk0p1 /system/etc/firmware/misc ro shortname=lower
-    exec /system/bin/sh /system/etc/init.qcom.modem_links.sh
-    mount ext4 /dev/block/mmcblk0p12 /system remount ro barrier=0
+   mkdir /firmware 0771 system system
+   wait /dev/block/mmcblk0p1
+   mount vfat /dev/block/mmcblk0p1 /firmware ro shortname=lower
+   exec /system/bin/sh /system/etc/init.qcom.modem_links.sh
 
 service dcvsd0 /system/bin/dcvsd -c 0 -f /data/misc/dcvsd/dcvsd0.conf
     user root
