--- a/init.target.rc
+++ b/init.target.rc
@@ -58,3 +58,5 @@ service mpdecision /system/bin/mpdecision --Nw=0.6 --Tw=80 --Ns=0.1 --Ts=250
 on property:init.svc.bootanim=stopped
     start dcvsd0
     start dcvsd1
+    start mpdecision
+
