--- a/init.target.rc
+++ b/init.target.rc
@@ -61,3 +61,7 @@ service thermald /system/bin/thermald
 
 service qrngd /system/bin/qrngd -f
     user root
+
+on property:init.svc.bootanim=stopped
+    start thermald
+    start mpdecision
