msm8660_surf: Enabling mp-decision by default
Change-Id: I711656486863c9dbd9232d82be7b0e664fc9633c

--- a/init.target.rc
+++ b/init.target.rc
@@ -60,3 +60,6 @@ service thermald /system/bin/thermald
 
 service qrngd /system/bin/qrngd -f
     user root
+
+on property:init.svc.bootanim=stopped
+    start mpdecision
