device: qcom: msm8660_surf: Do not autostart thermald
(cherry picked from commit 5f3c0329464033773ac9cb5b56dba96cfeefe9dd)

Conflicts:

	init.target.rc

Change-Id: Icaa8114968c5a476135b4f1718064f8ba6149503

--- a/init.target.rc
+++ b/init.target.rc
@@ -59,6 +59,5 @@ service thermald /system/bin/thermald
     user root
     disabled
 
-on property:init.svc.bootanim=stopped
-    start thermald
-
+service qrngd /system/bin/qrngd -f
+    user root
