msm8660_surf: Start mpdecision with power features
Change-Id: I986ece44240ee0e99ed3edf1f80ea91bc40e1aea

--- a/init.target.rc
+++ b/init.target.rc
@@ -50,7 +50,7 @@ service dcvs1 /system/bin/dcvs --cpu=1 --slacktime=64
     user root
     disabled
 
-service mpdecision /system/bin/mpdecision
+service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
     user root
     disabled
 
