telephony: set some properties based on baseband type
CRs-Fixed: 283514

(cherry picked from commit b7598723246ad82e4105c2c8fb8d2fca63f5f85b)

Change-Id: I63164feeacfb4ad1a7c0fe63c1d6001505eed150

--- a/init.target.rc
+++ b/init.target.rc
@@ -79,3 +79,7 @@ service qrngd /system/bin/qrngd -f
 on property:init.svc.bootanim=stopped
     start mpdecision
     start thermald
+
+on property:ro.baseband=svlte2a
+   setprop ro.config.ehrpd true
+   setprop ro.config.svlte1x true
