msm8660: Start kickstart as non-root user
CRs-Fixed: 275197
(cherry picked from commit 94008c7a25ca86edecd4627d3f5a3f9503a1ee1c)

Change-Id: I1655dc1483aaf95900a63e68dbaaf2dfe59a9043

--- a/init.target.rc
+++ b/init.target.rc
@@ -40,6 +40,7 @@ on emmc-fs
    exec /system/bin/sh /system/etc/init.qcom.modem_links.sh
 
 service kickstart /system/bin/qcks l
+    user system
     oneshot
     disabled
 
