device: qcom: msm8660_surf: init.target.rc: add command for starting qrngd service.
This is required to start the daemon that feeds the kernel entropy pool so
/dev/random device can be used to pull random numbers from.

(cherry picked from commit 20268f1690334b3d54a2681e6e5090631070f7b1)

Change-Id: If747085bf23bbfea11b90929136b2041a98d7c59

--- a/init.target.rc
+++ b/init.target.rc
@@ -62,3 +62,6 @@ service thermald /system/bin/thermald
 on property:init.svc.bootanim=stopped
     start thermald
     start mpdecision
+
+service qrngd /system/bin/qrngd -f
+    user root
