system.prop: rename ro.config.svlte1x
The variable is renamed to ro.ril.svlte1x to align with the
variable used in ICS builds.

Change-Id: Ia6a62e63f0f2bda4d661b5f03b3eb4361c453e1c

--- a/init.target.rc
+++ b/init.target.rc
@@ -79,4 +79,4 @@ service qrngd /system/bin/qrngd -f
 
 on property:ro.baseband=svlte2a
    setprop ro.config.ehrpd true
-   setprop ro.config.svlte1x true
+   setprop ro.ril.svlte1x true
