msm8660: shutdown: Force modem file system sync as part of shutdown
Change-Id: I9f74a79d7dfc6ebaff21163ccca82ddead280227

--- a/init.target.rc
+++ b/init.target.rc
@@ -80,3 +80,8 @@ service qrngd /system/bin/qrngd -f
 on property:ro.baseband=svlte2a
    setprop ro.config.ehrpd true
    setprop ro.ril.svlte1x true
+
+on property:sys.radio.shutdown=true
+    write  /sys/devices/platform/rs300000a7.65536/force_sync 1
+    write  /sys/devices/platform/rs300100a7.65536/force_sync 1
+
