--- a/init.target.rc
+++ b/init.target.rc
@@ -73,8 +73,9 @@ service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
     disabled
 
 service thermald /system/bin/thermald
+    class main
     user root
-    disabled
+    group root
 
 service qrngd /system/bin/qrngd -f
     user root
