--- a/init.target.rc
+++ b/init.target.rc
@@ -80,6 +80,11 @@ service thermald /system/bin/thermald
     user root
     group root
 
+service qseecomd /system/bin/qseecomd
+   class late_start 
+   user system
+   group system
+
 service qrngd /system/bin/qrngd -f
     class late_start
     user root
