--- a/init.target.rc
+++ b/init.target.rc
@@ -90,6 +90,6 @@ on property:ro.baseband=svlte2a
    setprop ro.ril.svlte1x true
 
 on property:sys.radio.shutdown=true
-    write  /sys/devices/platform/rs300000a7.65536/force_sync 1
-    write  /sys/devices/platform/rs300100a7.65536/force_sync 1
-
+   exec /system/bin/sh /system/etc/init.qcom.efs.sync.sh
+   user root
+   group root
