camera: Start camera daemon process
Change-Id: Ib224a41524c0365bb7b2dbea7d8c00b3434ae756

--- a/init.target.rc
+++ b/init.target.rc
@@ -44,6 +44,11 @@ on emmc-fs
 on post-fs
    mount ext4 /dev/block/mmcblk0p12 /system ro remount barrier=1
 
+service qcamerasvr /system/bin/mm-qcamera-daemon
+    class late_start
+    user system
+    group system camera inet
+
 service kickstart /system/bin/qcks l
     oneshot
     disabled
