msm8660_surf: Change usr/grp of camera daemon to camera/camera.
This makes sure communication channel (domain socket, for example)
created by daemon is accessible by mediaserver, because its group
will be camera.

Change-Id: Id0b7c5ea9ee9fce6d67ad381633b17b691316f3a

--- a/init.target.rc
+++ b/init.target.rc
@@ -46,8 +46,8 @@ on post-fs
 
 service qcamerasvr /system/bin/mm-qcamera-daemon
     class late_start
-    user system
-    group system camera inet
+    user camera
+    group camera system inet
 
 service kickstart /system/bin/qcks l
     oneshot
