--- a/init.target.rc
+++ b/init.target.rc
@@ -91,8 +91,9 @@ service qseecomd /system/bin/qseecomd
    group system
 
 service qrngd /system/bin/qrngd -f
-    class late_start
+    class main
     user root
+    group root
 
 on property:ro.baseband=svlte2a
    setprop ro.config.ehrpd true
