--- a/init.target.rc
+++ b/init.target.rc
@@ -27,22 +27,21 @@
 #
 #
 
-# on emmc mount the partition containing firmware
-on emmc-fs
-   mkdir /tombstones 0771 system system
-   mount ext4 /dev/block/mmcblk0p16 /tombstones nosuid nodev barrier=1
-   mkdir /tombstones/modem 0771 system system
-   mkdir /tombstones/mdm 0771 system system
-   mkdir /tombstones/lpass 0771 system system
-   mkdir /firmware 0771 system system
-   wait /dev/block/mmcblk0p1
-   mount vfat /dev/block/mmcblk0p1 /firmware ro shortname=lower
-   exec /system/bin/sh /system/etc/init.qcom.modem_links.sh
-   exec /system/bin/sh /system/etc/init.qcom.mdm_links.sh
-   write /sys/devices/i2c-0/0-0024/cyttsp_update_fw 1
+on early-init
+    mkdir /firmware 0771 system system
 
-on post-fs
-   mount ext4 /dev/block/mmcblk0p12 /system ro remount barrier=1
+on fs
+    mount_all fstab.msm8660
+
+    # Keeping following partitions outside fstab file. As user may not have
+    # these partition flashed on the device. Failure to mount any partition in fstab file
+    # results in failure to launch late-start class.
+
+    wait /dev/block/platform/msm_sdcc.1/by-name/cache
+    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/cache /cache nosuid nodev barrier=1
+
+    wait /dev/block/platform/msm_sdcc.1/by-name/modem
+    mount vfat /dev/block/platform/msm_sdcc.1/by-name/modem /firmware ro shortname=lower dmask=177 fmask=177
 
 service qcamerasvr /system/bin/mm-qcamera-daemon
     class late_start
