msm8660: Start qcamerasvr, modify qcamera daemon user and group.
We want to make sure that mediaserver can access sockets
created by qcamera daemon. Because camera is a group shared
by both processes, change the user to camera/camera.

Add qcamera daemon into input group and also call on boot
start qcamerasvr

Change-Id: I8ee95f5b9a844cadfd6102446d153709a9fcc79b
(cherry picked from commit a055ad6d86aaa10e3038337bc4e2b1570e3aa1de)

--- a/init.target.rc
+++ b/init.target.rc
@@ -67,10 +67,12 @@ service qcmdmlink /system/bin/sh /system/etc/init.qcom.mdm_links.sh
     disabled
     oneshot
 
+on boot
+   start qcamerasvr
 service qcamerasvr /system/bin/mm-qcamera-daemon
     class late_start
-    user system
-    group system camera inet
+    user camera
+    group camera system inet input
 
 service kickstart /system/bin/qcks l
     oneshot
