msm8660_surf:  Remount system as read-only in target rc file
8660 target needs to create softlinks on system partition during
boot up, so mount the system partition as r/w durinng boot up &
remount as read only on post fs

Change-Id: I549de06aa59c370e1f8746595f9c3f2448fd6a7f

--- a/init.target.rc
+++ b/init.target.rc
@@ -48,8 +48,12 @@ on fs
     wait /dev/block/platform/msm_sdcc.1/by-num/p14
     mount ext4 /dev/block/platform/msm_sdcc.1/by-num/p14 /persist nosuid nodev barrier=1
 
+on boot
     start qcmodemlink
     start qcmdmlink
+
+on post-fs
+   mount ext4 /dev/block/platform/msm_sdcc.1/by-num/p12 /system ro remount barrier=1
 
 service qcmodemlink /system/bin/sh /system/etc/init.qcom.modem_links.sh
     class main
