--- a/init.target.rc
+++ b/init.target.rc
@@ -31,6 +31,7 @@ on early-init
     mkdir /firmware 0771 system system
     mkdir /vendor 0771 system system
     symlink /firmware/image /vendor/firmware
+    symlink /data/tombstones /tombstones
 
 on fs
     mount_all fstab.msm8660
@@ -42,18 +43,16 @@ on fs
     wait /dev/block/platform/msm_sdcc.1/by-num/p15
     mount ext4 /dev/block/platform/msm_sdcc.1/by-num/p15 /cache nosuid nodev barrier=1
 
-    wait /dev/block/platform/msm_sdcc.1/by-num/p1
-    mount vfat /dev/block/platform/msm_sdcc.1/by-num/p1 /firmware ro shortname=lower dmask=177 fmask=177
-
     wait /dev/block/platform/msm_sdcc.1/by-num/p14
     mount ext4 /dev/block/platform/msm_sdcc.1/by-num/p14 /persist nosuid nodev barrier=1
 
-on boot
-    start qcmodemlink
+on post-fs
     start qcmdmlink
 
-on post-fs
-   mount ext4 /dev/block/platform/msm_sdcc.1/by-num/p12 /system ro remount barrier=1
+on post-fs-data
+   mkdir /tombstones/modem 0771 system system
+   mkdir /tombstones/mdm 0771 system system
+   mkdir /tombstones/lpass 0771 system system
 
 service qcmodemlink /system/bin/sh /system/etc/init.qcom.modem_links.sh
     class main
