msm8660_surf: Fix target init scripts
- Create tombstones directory for collecting mdm dumps
- Remove modem scripts, as these are run from init.qcom.post_fs.sh
- Add delay between reset out of mdm 9k and 8k

Change-Id: I2811b023036dfa162a1b16c7005168e3ae03228c

--- a/init.target.rc
+++ b/init.target.rc
@@ -29,8 +29,6 @@
 
 on early-init
     mkdir /firmware 0771 system system
-    mkdir /vendor 0771 system system
-    symlink /firmware/image /vendor/firmware
     symlink /data/tombstones /tombstones
 
 on fs
@@ -46,25 +44,11 @@ on fs
     wait /dev/block/platform/msm_sdcc.1/by-num/p14
     mount ext4 /dev/block/platform/msm_sdcc.1/by-num/p14 /persist nosuid nodev barrier=1
 
-on post-fs
-    start qcmdmlink
-
 on post-fs-data
+   mkdir /data/tombstones 0771 system system
    mkdir /tombstones/modem 0771 system system
    mkdir /tombstones/mdm 0771 system system
    mkdir /tombstones/lpass 0771 system system
-
-service qcmodemlink /system/bin/sh /system/etc/init.qcom.modem_links.sh
-    class main
-    user root
-    disabled
-    oneshot
-
-service qcmdmlink /system/bin/sh /system/etc/init.qcom.mdm_links.sh
-    class main
-    user root
-    disabled
-    oneshot
 
 on boot
    start qcamerasvr
