--- a/init.target.rc
+++ b/init.target.rc
@@ -50,7 +50,7 @@ on post-fs-data
    mkdir /tombstones/mdm 0771 system system
    mkdir /tombstones/lpass 0771 system system
    wait /dev/block/platform/msm_sdcc.1/by-num/p1
-   mount vfat /dev/block/platform/msm_sdcc.1/by-num/p1 /firmware ro shortname=lower
+   mount vfat /dev/block/platform/msm_sdcc.1/by-num/p1 /firmware ro shortname=lower,uid=1000,gid=1000,dmask=227,fmask=337
    start modem_link
 
 on boot
