--- a/init.target.rc
+++ b/init.target.rc
@@ -49,6 +49,7 @@ on post-fs-data
    mkdir /tombstones/modem 0771 system system
    mkdir /tombstones/mdm 0771 system system
    mkdir /tombstones/lpass 0771 system system
+   mount vfat /dev/block/platform/msm_sdcc.1/by-num/p1 /firmware ro shortname=lower,uid=1000,gid=1000,dmask=227,fmask=337
 
 service kickstart /system/bin/qcks l
     oneshot
