--- a/init.target.rc
+++ b/init.target.rc
@@ -44,6 +44,9 @@ on fs
     wait /dev/block/platform/msm_sdcc.1/by-num/p14
     mount ext4 /dev/block/platform/msm_sdcc.1/by-num/p14 /persist nosuid nodev barrier=1
 
+    wait /dev/block/platform/msm_sdcc.1/by-num/p1
+    mount vfat /dev/block/platform/msm_sdcc.1/by-num/p1 /firmware ro shortname=lower,uid=1000,gid=1000,dmask=227,fmask=337
+
 on post-fs-data
    mkdir /data/tombstones 0771 system system
    mkdir /tombstones/modem 0771 system system
