msm8660_surf: Fix svlte boot up issue
On SVLTE targets there is a timing requirement for
reset out of 8K modem & 9K modem. As per the boot up
sequence, 8K modem comes out of reset 5secs after 9k
modem comes out of reset. As the apps code moved to
jellybean the order & sequence of init script changed
due to which 8K & 9K are coming out of reset at the
same time which results in target crash. To avoid this
issue introduce a delay between 8K & 9K modem link
scripts.

(cherry picked from commit ef640592e4c04889b5051640a6ebf5b15a0ca14b)

Change-Id: I752d32b659bea323e488c3bce272a7add236f18b

--- a/init.target.rc
+++ b/init.target.rc
@@ -44,14 +44,14 @@ on fs
     wait /dev/block/platform/msm_sdcc.1/by-num/p14
     mount ext4 /dev/block/platform/msm_sdcc.1/by-num/p14 /persist nosuid nodev barrier=1
 
-    wait /dev/block/platform/msm_sdcc.1/by-num/p1
-    mount vfat /dev/block/platform/msm_sdcc.1/by-num/p1 /firmware ro shortname=lower
-
 on post-fs-data
    mkdir /data/tombstones 0771 system system
    mkdir /tombstones/modem 0771 system system
    mkdir /tombstones/mdm 0771 system system
    mkdir /tombstones/lpass 0771 system system
+   wait /dev/block/platform/msm_sdcc.1/by-num/p1
+   mount vfat /dev/block/platform/msm_sdcc.1/by-num/p1 /firmware ro shortname=lower
+   start modem_link
 
 on boot
    start qcamerasvr
@@ -75,6 +75,11 @@ on property:ro.baseband=svlte2a
     mkdir /data/qcks 0770 system system
     start kickstart
 
+service modem_link /system/bin/sh /system/etc/init.qcom.modem_links.sh
+    class main
+    user root
+    disabled
+    oneshot
 
 service dcvsd0 /system/bin/dcvsd -c 0 -f /data/misc/dcvsd/dcvsd0.conf
     class late_start
