8660_surf: Add time-services to late_start class
Time_daemon maintains time in files in "/data" partition. Adding
time_daemon to late_start class to start it after data partition
is mounted.

CRs-Fixed: 387211
Change-Id: Ie9aa64d45fede965cd58fec69bfe97142ac45bc2

--- a/init.target.rc
+++ b/init.target.rc
@@ -118,3 +118,8 @@ on property:sys.radio.shutdown=true
    exec /system/bin/sh /system/etc/init.qcom.efs.sync.sh
    user root
    group root
+
+service time_daemon /system/bin/time_daemon
+   class late_start
+   user root
+   group root
