--- a/init.target.rc
+++ b/init.target.rc
@@ -81,6 +81,11 @@ service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
     user root
     disabled
 
+service qosmgrd /system/bin/qosmgr /system/etc/qosmgr_rules.xml
+    user system
+    group system
+    disabled
+
 service thermald /system/bin/thermald
     class late_start
     user root
