--- a/init.target.rc
+++ b/init.target.rc
@@ -52,6 +52,7 @@ on post-fs-data
    mkdir /tombstones/modem 0771 system system
    mkdir /tombstones/mdm 0771 system system
    mkdir /tombstones/lpass 0771 system system
+   chmod 0775 /data/misc
 
 on boot
    start qcamerasvr
