--- a/init.target.rc
+++ b/init.target.rc
@@ -58,7 +58,7 @@ on boot
 service qcamerasvr /system/bin/mm-qcamera-daemon
     class late_start
     user camera
-    group camera system inet input
+    group media system inet input
 
 service kickstart /system/bin/qcks l
     oneshot
